--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@discordjs/voice": "^0.16.0",
-    "discord.js": "^13.17.1",
+    "discord.js": "^14.14.1"
     "dotenv": "^16.4.5",
     "play-dl": "^1.9.7"
   }
